--- a/src/WillHero/page2.fxml
+++ b/src/WillHero/page2.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="850.0" maxWidth="1200.0" prefHeight="850.0" prefWidth="1200.0" style="-fx-background-image: url('GameAssets/gamepag2.jpg'); -fx-background-color: #bdf6fe;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane maxHeight="850.0" maxWidth="1200.0" prefHeight="850.0" prefWidth="1200.0" style="-fx-background-image: url('GameAssets/gamepag2.jpg'); -fx-background-color: #bdf6fe;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WillHero.Controller">
    <Button fx:id="nameSubmit" contentDisplay="CENTER" layoutX="571.0" layoutY="379.0" mnemonicParsing="false" onAction="#NameButtonSubmitted" style="-fx-background-color: #000000;" text="OK" textFill="#1dd177">
       <font>
          <Font name="System Bold Italic" size="21.0" />
@@ -15,7 +15,7 @@
          <Font name="Ebrima Bold" size="20.0" />
       </font>
    </Label>
-   <TextField fx:id="userName" layoutX="520.0" layoutY="317.0" style="-fx-background-color: #000000;">
+   <TextField fx:id="userName" layoutX="520.0" layoutY="317.0">
       <font>
          <Font name="System Bold Italic" size="12.0" />
       </font>
