--- a/src/WillHero/page3.fxml
+++ b/src/WillHero/page3.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="850.0" maxWidth="1200.0" prefHeight="850.0" prefWidth="1200.0" style="-fx-background-color: #bdf6fe;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller2">
+<AnchorPane maxHeight="850.0" maxWidth="1200.0" prefHeight="850.0" prefWidth="1200.0" style="-fx-background-color: #bdf6fe;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WillHero.Controller2">
    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="86.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true">
       <Image url="@../GameAssets/island1.jpg" />
    </ImageView>
