--- a/src/WillHero/page4.fxml
+++ b/src/WillHero/page4.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="850.0" maxWidth="1200.0" prefHeight="850.0" prefWidth="1200.0" style="-fx-background-color: #bdf6fe;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller2">
+<AnchorPane maxHeight="850.0" maxWidth="1200.0" prefHeight="850.0" prefWidth="1200.0" style="-fx-background-color: #bdf6fe;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WillHero.Controller2">
    <ImageView fitHeight="689.0" fitWidth="1200.0" layoutX="86.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
       <Image url="@../GameAssets/WillHeropg2.jpg" />
    </ImageView>
