--- a/src/WillHero/game1.fxml
+++ b/src/WillHero/game1.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane fx:id="gameScreenFixed1" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #bdf6fe;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WillHero.GameController">
+<AnchorPane fx:id="gameScreenFixed1" prefHeight="490.0" prefWidth="675.0" style="-fx-background-color: #3de0ff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WillHero.GameController">
    <children>
-      <Group layoutX="300.0" layoutY="187.0" onMouseClicked="#forwardMove1" />
+      <Group layoutX="300.0" layoutY="187.0" />
+      <Group />
    </children>
 </AnchorPane>
